--- a/projects/storyboard/storyboard-motion.html
+++ b/projects/storyboard/storyboard-motion.html
@@ -1,99 +1,13 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-
-body {
-    width: 100%;
-}
-.chart {
-    margin: 0 auto; /*border: 1px solid red;*/
-}
-
-.chart rect {
-  fill: white;
-  stroke: #888;
-  stroke-width: 1px;
-  /*shape-rendering: geometricPrecision;*/
-  shape-rendering: crispEdges;
-}
-
-.chart text {
-  fill: #444;
-  font-size: 20px;
-  font-family: 'Courier New', sans-serif;
-  text-anchor: middle;
-}
-
-</style>
-<svg class="chart"></svg>
-<script src="../../js/d3.v3.min.js" charset="utf-8"></script><!--<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
-<script>
-
-var cards = [
-    ["one"],
-    ["two"],
-    ["three"],
-    ["three"],
-    ["three"],
-    ["three"],
-    ["three"],
-    ["three"],
-    ["three"],
-    ["four"]
-];
-
-var cardWidth = 120,
-    cardPadding = 10,
-    offset = cardWidth,
-    width = (cardWidth * 4) + (cardPadding * 2),
-    height = cardWidth * 3;
-
-var chart = d3.select(".chart")
-    .attr("width", width)
-    .attr("height", height);
-
-var card = chart.selectAll("g")
-    .data(cards)
-    .enter().append("g")
-    .attr("transform", function(d, i) { var pos = offset + (i * (cardWidth + cardPadding)); return "translate(" + pos + ", 100)"; })
-    .style("opacity", function(d, i) { return 1 - (i * (0.5)) });
-
-card.append("rect")
-    .attr("width", cardWidth - 1)
-    .attr("height", cardWidth - 1);
-
-card.append("text")
-    .attr("x", cardWidth / 2)
-    .attr("y", cardWidth / 2)
-    .attr("dy", ".35em")
-    // .attr("dx", "-.35em")
-    .text(function(d, i) { return i; });
-
-var button = d3.select(".chart"); // click anywhere on svg
-var pointer = 0;
-button.on("click", function() {
-    if (pointer < cards.length)
-    {
-        pointer++;
-        card.transition()
-        .attr("transform", function(d, i) {
-            var pos =
-                offset +
-                (i * (cardWidth + cardPadding))
-                - (offset * pointer) // move by pointer
-                - (cardPadding * pointer); // also move by spacing
-            return "translate(" + pos + ", 100)";
-        })
-        .duration(600)
-        .style("opacity", function(d, i) {
-            if(pointer > i ){
-                return 0;
-            }
-            else {
-                return (0.5 * (pointer - i)) + 1;
-            }
-        });
-    }
-})
-
-</script>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="storyboard-motion.css">
+</head>
+<body>
+    <svg class="main"></svg>
+    <script src="../../js/d3.v3.min.js" charset="utf-8"></script><!--<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
+    <script src="storyboard-motion.js" charset="utf-8"></script>
+</body>
+</html>
