--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 ---
-layout: default
+layout: page #layout: default
+title: Projects #[none]
 ---
-
-INDEX
+<p>
+    Works in progress:
+</p>
+<ul>
+{% for project in site.pages %}
+    {% if project.url contains '/projects' and project.url != '/projects/' %} <!-- list all projects, exclude index page -->
+        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
+    {% endif %}
+{% endfor %}
+</ul>
