--- a/projects/Textural-Messages/Textural-Messages4b.html
+++ b/projects/Textural-Messages/Textural-Messages4b.html
@@ -8,7 +8,7 @@ How fast would it be to pre-calculate/preload all the messages, then just reveal
     <title>Textural Messages</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-full.js"></script>
-    <!-- <script type="text/javascript" src="../../paperjs-v0.9.22/dist/paper-full.js"></script> -->
+    <!-- <script type="text/javascript" src="../../js/paper-full.js"></script> -->
     <script type="text/paperscript" src="Textural-Messages4.js" canvas="canvas"></script>
 </head>
 <body>
