Edit homepage language

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <p>
     A series of new compositions built on the web.
-    The works will be algorithmically generated so that each score and each performance is unique and customized while still being shaped by the composition's parameters.
+    The works will be algorithmically generated so that each score and each performance is unique while still being shaped by the composition's parameters.
 </p>
 <h3>Tests and works in progress</h3>
 <ul>
