--- a/projects/decision-tree/index.html
+++ b/projects/decision-tree/index.html
@@ -1,6 +1,7 @@
 ---
 layout: score
 title: Decision Tree
+vsjs: true
 ---
 <h3>Weighted randomness</h3>
 <p>Those more often you select a letter,<br />the more often it will appear</p>
