--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 </p>
 <h3>Tests and works in progress</h3>
 <ul>
-{% for project in site.pages %}
+{% for project in site.html_pages %}
     {% if project.url contains '/projects' and project.url != '/projects/' %} <!-- list all projects, exclude index page -->
         <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
     {% endif %}
