--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <h3>Tests and works in progress</h3>
 <ul>
 {% for project in site.html_pages %}
-    {% if project.url contains '/projects' and project.url != '/projects/' %} <!-- list all projects, exclude index page -->
+    {% if project.url contains '/projects' and project.status != 'unlisted' %}
         <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
     {% endif %}
 {% endfor %}
