Clarify weighted randomness test

--- a/projects/decision-tree/index.html
+++ b/projects/decision-tree/index.html
@@ -4,4 +4,4 @@ title: Decision Tree
 vsjs: true
 ---
 <h3>Weighted randomness</h3>
-<p>Those more often you select a letter,<br />the more often it will appear</p>
+<p>Click on one of the two symbols.<br />The more often you select a symbol,<br />the more often it will appear.</p>
