Clean up project/time-control

--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -3,19 +3,5 @@ layout: score
 title: timing controls
 footer: true
 ---
+<h3>scoreEvents in milliseconds</h3>
 <p id="events"></p>
-
-{% comment %}
-<div class="play">
-    <button id="back" onclick="stepPointer(-1)">&lt;</button>
-    <button id="seq" onclick="seqFunc()">&#9657;</button>
-    <button id="stop" onclick="stopIt()">&#9633;</button>
-    <button id="fwd" onclick="stepPointer(1)">&gt;</button>
-    <input id="pointer" type="number" value="0"/><!-- step="1" -->
-</div>
-<!--
-PC options (PCs/note names/transpose)
-tutorial
-save/print
--->
-{% endcomment %}
