Show project notes

--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -4,4 +4,5 @@ title: timing controls
 footer: true
 ---
 <h3>scoreEvents in milliseconds</h3>
+<p>Will autoplay after 1 second, using schedule()</p>
 <p id="events"></p>
