Allow each score event an individual function and params

--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -2,6 +2,7 @@
 layout: score
 title: timing controls
 footer: true
+vsjs: true
 ---
 <h3>scoreEvents in milliseconds</h3>
 <p>Will autoplay after 1 second, using schedule()</p>
