Change otherEvent() to objEvent()
Show that parameters can be created and passed as an object or
array, depending on what the function requires.

--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -6,6 +6,6 @@ vsjs: true
 ---
 <h3>Dynamically creating and playing a score with scoreEvents</h3>
 <p>There is a 50% chance the event function called turns the numbers blue or green,
-and a 50% chance the event parameters will change the round edges around the numbers.</p>
+and a 2/3 chance the event parameters will change the round edges around the numbers.</p>
 <p>Will autoplay after 1 second, using schedule().</p>
 <p id="events"></p>
