Simplify score-footer controls

--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -9,3 +9,4 @@ vsjs: true
 and a 2/3 chance the event parameters will change the round edges around the numbers.</p>
 <p>Will autoplay after 1 second, using schedule().</p>
 <p id="events"></p>
+<h4>score controls</h4>
