--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -1,12 +1,14 @@
 ---
 layout: score
 title: timing controls
+composer: John Teske
+publish_date: 2016
 footer: true
 vsjs: true
+info: >
+    <h3>Dynamically creating and playing a score with scoreEvents</h3>
+    <p>There is a 50% chance the event function called turns the numbers blue or green,
+    and a 2/3 chance the event parameters will change the round edges around the numbers.</p>
+    <p>Will autoplay after 1 second, using schedule().</p>
 ---
-<h3>Dynamically creating and playing a score with scoreEvents</h3>
-<p>There is a 50% chance the event function called turns the numbers blue or green,
-and a 2/3 chance the event parameters will change the round edges around the numbers.</p>
-<p>Will autoplay after 1 second, using schedule().</p>
 <p id="events"></p>
-<h4>score controls</h4>
