Show page.publish_date if exists, move project notes to modal

--- a/projects/decision-tree/index.html
+++ b/projects/decision-tree/index.html
@@ -2,6 +2,7 @@
 layout: score
 title: Decision Tree
 vsjs: true
+info: >
+    <h3>Weighted randomness</h3>
+    <p>Click on one of the two symbols.<br />The more often you select a symbol,<br />the more often it will appear.</p>
 ---
-<h3>Weighted randomness</h3>
-<p>Click on one of the two symbols.<br />The more often you select a symbol,<br />the more often it will appear.</p>
