Update score info

--- a/projects/decision-tree/index.html
+++ b/projects/decision-tree/index.html
@@ -4,5 +4,9 @@ title: Decision Tree
 vsjs: true
 info: >
     <h3>Weighted randomness</h3>
-    <p>Click on one of the two symbols.<br />The more often you select a symbol,<br />the more often it will appear.</p>
+    <p>
+        Click on one of the two symbols.
+        The more often you select a symbol,
+        the more often it will appear.
+    </p>
 ---
