--- a/index.html
+++ b/index.html
@@ -5,11 +5,4 @@ layout: default
     A series of new compositions built on the web.
     The works will be algorithmically generated so that each score and each performance is unique while still being shaped by the composition's parameters.
 </p>
-<h3>Tests and works in progress</h3>
-<ul>
-{% for project in site.html_pages %}
-    {% if project.url contains '/projects' and project.status != 'unlisted' %}
-        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
-    {% endif %}
-{% endfor %}
-</ul>
+{% include work-list.html %}
