Add 10 globjects to score events in globject project

--- a/projects/globject/index.html
+++ b/projects/globject/index.html
@@ -1,6 +1,6 @@
 ---
 layout: score
 title: globject
-info: Tap/click to advance
+footer: true
 ---
 <script src="globject.js" charset="utf-8"></script>
