Add structure points
For interploating parameter envelopes

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -6,4 +6,5 @@ composer: John Teske
 publish_date: 2015
 info: >
     <p>for Friction Quartet</p>
+    <p>Adapted from original SuperCollider code</p>
 ---
