--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -1,8 +1,7 @@
 ---
 layout: score
 title: timing controls
-composer: John Teske
-publish_date: 2016
+status: test
 footer: true
 info: >
     <h3>Dynamically creating and playing a score with scoreEvents</h3>
