Create separate performer position indicator <svg>

--- a/projects/3d-object/index.html
+++ b/projects/3d-object/index.html
@@ -3,7 +3,10 @@ layout: score
 title: 3D object
 status: test
 ---
-<div class="angle-control">
-    <label>Performer angle</label>
-    <input id="performer-angle" type="number" value="45" step="15" />
+<div>
+    <svg class="indicator"></svg>
+    <div class="angle-control">
+        <label>Performer angle</label>
+        <input id="performer-angle" type="number" value="45" step="15" />
+    </div>
 </div>
