Add mini score sample to help visualize results

--- a/projects/3d-object/index.html
+++ b/projects/3d-object/index.html
@@ -3,8 +3,10 @@ layout: score
 title: 3D object
 status: test
 ---
-<div>
-    <svg class="indicator"></svg>
+<div class="position-controls">
+    <div class="indicator">
+        <svg></svg>
+    </div>
     <div class="angle-control">
         <label>Performer angle</label>
         <input id="performer-angle" type="number" value="45" step="15" />
