--- a/projects/3d-object/index.html
+++ b/projects/3d-object/index.html
@@ -3,12 +3,24 @@ layout: score
 title: 3D object
 status: test
 ---
+
+<h3>2D relationships</h3>
+<div class="position-controls">
+    <div>
+        <svg id="mini-score"></svg>
+    </div>
+    <div style="text-align: left; white-space: pre;">
+        <p>performer = <span id="performer"></span></p>
+        <p>score.center = <span id="score-center"></span></p>
+    </div>
+</div>
+
+<h3>Controls: performer angle</h3>
 <div class="position-controls">
     <div class="indicator">
         <svg></svg>
     </div>
     <div class="angle-control">
-        <label>Performer angle</label>
         <input id="performer-angle" type="number" value="45" step="15" />
     </div>
 </div>
