Update miniScore point readout

--- a/projects/3d-object/index.html
+++ b/projects/3d-object/index.html
@@ -10,8 +10,9 @@ status: test
         <svg id="mini-score"></svg>
     </div>
     <div style="text-align: left; white-space: pre;">
-        <p>performer = <span id="performer"></span></p>
-        <p>score.center = <span id="score-center"></span></p>
+        <p>// points based on score indices</p>
+        <p>performer = {<span id="performer"></span> };</p>
+        <p>score.center = {<span id="score-center"></span> };</p>
     </div>
 </div>
 
