Add basic settings modal, wrapping both modals in same overlay

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -6,5 +6,7 @@ publish_date: 2015
 info: >
     <p>for Friction Quartet</p>
     <p>Adapted from original SuperCollider code</p>
+settings: >
+    Parts
 footer: true
 ---
