Add basic setting control to change number of ad;sr parts

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -7,6 +7,7 @@ info: >
     <p>for Friction Quartet</p>
     <p>Adapted from original SuperCollider code</p>
 settings: >
-    Parts
+    Number of parts: <input type="number" id="settings-parts">
+    <button id="settings-generate">Generate new score</button>
 footer: true
 ---
