--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -3,9 +3,7 @@ layout: score
 title: ad;sr
 composer: John Teske
 publish_date: 2015
-info: >
-    <p>for Friction Quartet</p>
-    <p>Adapted from original SuperCollider code</p>
+info_file: _info.md
 settings: >
     Number of parts: <input type="number" id="settings-parts">
     <button id="settings-generate">Generate new score</button>
