Add dedication to frontmatter, info modal

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -3,6 +3,7 @@ layout: score
 title: ad;sr
 composer: John Teske
 publish_date: 2015
+dedication: for Friction Quartet
 info_file: _info.md
 settings: >
     Number of parts: <input type="number" id="settings-parts">
