--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -4,8 +4,17 @@ title: timing controls
 status: test
 footer: true
 info: >
-    <h3>Dynamically creating and playing a score with scoreEvents</h3>
-    <p>There is a 50% chance the event function called turns the numbers blue or green,
-    and a 2/3 chance the event parameters will change the round edges around the numbers.</p>
+    <h3>Playground for event timing, including WebSocket control</h3>
+    <p>
+        When serving the site locally, run <pre>ruby websockets.rb</pre> to run the WebSocket server.
+        Devices accessing the local site will be able to send control messages for timing.
+    </p>
 ---
 <p id="events"></p>
+
+<div class="ws">
+    <h3>WebSockets</h3>
+    <div id="ws-log"></div>
+    <!-- <button id="connect">Connect</button> -->
+    <!-- <button id="disconnect">Disconnect</button> -->
+</div>
