--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -14,6 +14,9 @@ info: >
 
 <div class="ws">
     <h3>WebSockets</h3>
+    {% unless jekyll.environment == "offline" %}
+    <p>Only available in local environment.</p>
+    {% endunless %}
     <div id="ws-log"></div>
     <!-- <button id="connect">Connect</button> -->
     <!-- <button id="disconnect">Disconnect</button> -->
