Make websockets.js a module
Need to address the option to include custom control callbacks
in addition to websockets message handlers.

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -8,6 +8,6 @@ info_file: _info.md
 settings: >
     Number of parts: <input type="number" id="settings-parts">
     <button id="settings-generate">Generate new score</button>
-vs_modules: [cue, xByDuration, dictionary.bravura]
+vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
 footer: true
 ---
