--- a/projects/time-control/index.html
+++ b/projects/time-control/index.html
@@ -9,10 +9,11 @@ info: >
         When serving the site locally, run <pre>ruby websockets.rb</pre> to run the WebSocket server.
         Devices accessing the local site will be able to send control messages for timing.
     </p>
+# vs_modules: [websockets]
 ---
 <p id="events"></p>
 
-<div class="ws">
+{% comment %}<div class="ws">
     <h3>WebSockets</h3>
     {% unless jekyll.environment == "offline" %}
     <p>Only available in local environment.</p>
@@ -20,4 +21,4 @@ info: >
     <div id="ws-log"></div>
     <!-- <button id="connect">Connect</button> -->
     <!-- <button id="disconnect">Disconnect</button> -->
-</div>
+</div>{% endcomment %}
