Update 3d render logic with perspective projection

--- a/projects/3d-object/index.html
+++ b/projects/3d-object/index.html
@@ -3,20 +3,7 @@ layout: score
 title: 3D object
 status: test
 ---
-
-<h3>2D relationships</h3>
-<div class="position-controls">
-    <div>
-        <svg id="mini-score"></svg>
-    </div>
-    <div style="text-align: left; white-space: pre;">
-        <p>// points based on score indices</p>
-        <p>performer = {<span id="performer"></span> };</p>
-        <p>score.center = {<span id="score-center"></span> };</p>
-    </div>
-</div>
-
-<h3>Controls: performer angle</h3>
+<!-- <h3>Controls: performer angle</h3>
 <div class="position-controls">
     <div class="indicator">
         <svg></svg>
@@ -24,4 +11,4 @@ status: test
     <div class="angle-control">
         <input id="performer-angle" type="number" value="45" step="15" />
     </div>
-</div>
+</div> -->
