Style ad;sr settings modal

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -6,8 +6,13 @@ publish_date: 2015
 dedication: for Friction Quartet
 info_file: _info.md
 settings: >
-    Number of parts: <input type="number" id="settings-parts">
-    <button id="settings-generate">Generate new score</button>
+    <div style="margin-bottom: 1em">
+        <label>Number of parts:</label>
+        <input type="number" id="settings-parts">
+    </div>
+    <div>
+        <button id="settings-generate">Generate new score</button>
+    </div>
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
 footer: true
 ---
