Allow settings markdown file to be used

--- a/projects/adsr/index.html
+++ b/projects/adsr/index.html
@@ -5,14 +5,7 @@ composer: John Teske
 publish_date: 2015
 dedication: for Friction Quartet
 info_file: _info.md
-settings: >
-    <div style="margin-bottom: 1em">
-        <label>Number of parts:</label>
-        <input type="number" id="settings-parts">
-    </div>
-    <div>
-        <button id="settings-generate">Generate new score</button>
-    </div>
+settings_file: _settings.md
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
 footer: true
 ---
