Use phrase spacing to show phrase texture within globject

--- a/projects/globject/index.html
+++ b/projects/globject/index.html
@@ -2,5 +2,5 @@
 layout: score
 title: globject
 footer: true
-vs_modules: [pitchClassFormat]
+vs_modules: [dictionary.bravura, xByDuration, pitchClassFormat]
 ---
