--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -7,5 +7,6 @@ dedication: for Friction Quartet
 info_file: _info.md
 settings_file: _settings.md
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
+status: published
 footer: true
 ---
