--- a/scores/globject/index.html
+++ b/scores/globject/index.html
@@ -1,6 +1,7 @@
 ---
 layout: score
 title: globject
+status: wip
 footer: true
 vs_modules: [dictionary.bravura, xByDuration, pitchClassFormat]
 ---
