Add instrumentation to score and works list

--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -2,8 +2,9 @@
 layout: score
 title: ad;sr
 composer: John Teske
-publish_date: 2015
+publish_date: 2015, rev. 2017
 dedication: for Friction Quartet
+instrumentation: any ensemble (3+)
 info_file: _info.md
 settings_file: _settings.md
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
