--- a/scores/storyboard/index.html
+++ b/scores/storyboard/index.html
@@ -5,8 +5,10 @@ status: wip
 footer: true
 settings: >
     Display pitch classes as:
-    <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-    <input type="radio" name="settings-pc-display" value="name"> Note names<br>
+    <div style="margin: 1em 0;">
+        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
+        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
+    </div>
     <button id="settings-generate">Generate new score</button>
 vs_modules: [cue, dictionary.bravura, pitchClassFormat]
 ---
