--- a/scores/storyboard/index.html
+++ b/scores/storyboard/index.html
@@ -10,5 +10,5 @@ settings: >
         <input type="radio" name="settings-pc-display" value="name"> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
-vs_modules: [cue, dictionary.bravura, pitchClassFormat]
+vs_modules: [cue, dictionary.bravura, pitchClassFormat, settings.radio]
 ---
