--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -3,4 +3,5 @@ layout: score
 title: Textural Messages
 status: wip
 footer: true
+vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClassFormat]
 ---
