Prep Textural Messages for pc format options
For the education visits, pc formatting may be hardcoded to
show note names. Enabling this setting at this time means
requiring yet another module dependency in drawGlobject.

--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -3,5 +3,6 @@ layout: score
 title: Textural Messages
 status: wip
 footer: true
-vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClassFormat]
+#settings_file: _settings.html
+vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClassFormat, settings.radio]
 ---
