--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -6,8 +6,8 @@ footer: true
 settings: >
     Display pitch classes as:
     <div style="margin: 1em 0;">
-        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
+        <input type="radio" name="settings-pc-display" value="integer" disabled> Integers<br>
+        <input type="radio" name="settings-pc-display" value="name" checked> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
 vs_modules: [pitchClassFormat, settings.radio]
