Add pcsetTranspose() to pitchClass module

--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -4,5 +4,5 @@ title: Textural Messages
 status: wip
 footer: true
 #settings_file: _settings.html
-vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClassFormat, settings.radio]
+vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClass, settings.radio]
 ---
