--- a/scores/globject/index.html
+++ b/scores/globject/index.html
@@ -3,5 +3,5 @@ layout: score
 title: globject
 status: wip
 footer: true
-vs_modules: [drawGlobject, dictionary.bravura, xByDuration, pitchClass]
+vs_modules: [drawGlobject, dictionary.bravura, xByDuration, trichords, pitchClass]
 ---
