Rewrite Decision Tree

--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -9,4 +9,5 @@ info: >
         The more often you select a symbol,
         the more often it will appear.
     </p>
+vs_modules: [dictionary.bravura]
 ---
