Add up/down arrow key selection in Decision Tree

--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -1,13 +1,12 @@
 ---
 layout: score
 title: Decision Tree
-status: test
+status: wip
 info: >
     <h3>Weighted randomness</h3>
     <p>
-        Click on one of the two symbols.
-        The more often you select a symbol,
-        the more often it will appear.
+        Click on one of the symbols or use the up and down arrow keys to choose.
+        The more often you select a symbol, the more often it will appear.
     </p>
 vs_modules: [dictionary.bravura]
 ---
