--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -5,8 +5,8 @@ status: wip
 info: >
     <h3>Weighted randomness</h3>
     <p>
-        Click on one of the symbols or use the up and down arrow keys to choose.
-        The more often you select a symbol, the more often it will appear.
+        Tap or click on one of the cells or use the up and down arrow keys to choose a cell.
+        The parameters of the cell you choose will be more likely to appear in future cells.
     </p>
 vs_modules: [dictionary.bravura]
 ---
