Remove notes on WebSocket control from timing-events

--- a/scores/time-control/index.html
+++ b/scores/time-control/index.html
@@ -4,11 +4,11 @@ title: timing controls
 status: test
 footer: true
 info: >
-    <h3>Playground for event timing, including WebSocket control</h3>
-    <p>
+    <h3>Playground for event timing<!--, including WebSocket control--></h3>
+    <!--<p>
         When serving the site locally, run <pre>ruby websockets.rb</pre> to run the WebSocket server.
         Devices accessing the local site will be able to send control messages for timing.
-    </p>
+    </p>-->
 # vs_modules: [websockets]
 ---
 <p id="events"></p>
