--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: score
 title: Textural Messages
-status: wip
+status: test
 footer: true
 #settings_file: _settings.html
 vs_modules: [drawGlobject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio]
