--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -4,5 +4,5 @@ title: Textural Messages
 status: test
 footer: true
 #settings_file: _settings.html
-vs_modules: [drawGlobject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio]
+vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio]
 ---
