Save pitch class set choice but display transposed

--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -8,5 +8,5 @@ info: >
         Tap or click on one of the cells or use the up and down arrow keys to choose a cell.
         The parameters of the cell you choose will be more likely to appear in future cells.
     </p>
-vs_modules: [dictionary.bravura]
+vs_modules: [dictionary.bravura, pitchClass]
 ---
