--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -8,7 +8,7 @@ info: >
         Tap or click on one of the cells or use the up and down arrow keys to choose a cell.
         The parameters of the cell you choose will be more likely to appear in future cells.
     </p>
-# footer: true
+footer: true
 settings: >
     <div>
         <h4>WebSocket Connection:</h4>
