Update tutorial language

--- a/scores/tutorial/index.html
+++ b/scores/tutorial/index.html
@@ -4,12 +4,12 @@ title: tutorial
 status: test
 footer: true
 info: >
-    Lorem
+    Close the info modal by clicking away, clicking the close button in the top right, or by pressing the escape key.
 settings: >
-    Ipsum
+    Close the settings modal by clicking away, clicking the close button in the top right, or by pressing the escape key.
 ---
 
 <div class="tutorial-message">
-    <p>Press the play button in the footer to start.</p>
-    <p>If it disappears, tap, click, or hover over the bottom of the page.</p>
+    <p>Click the play button in the footer or press spacebar to start.</p>
+    <p>If the footer is not visible, tap or hover over the bottom of the page to make it reappear.</p>
 </div>
