Style debug text

--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -16,4 +16,4 @@ settings: >
     </div>
 vs_modules: [dictionary.bravura, pitchClass, websockets]
 ---
-<p class="debug"></p>
+<p class="debug monospace"></p>
