--- a/scores/decision-tree/index.html
+++ b/scores/decision-tree/index.html
@@ -1,19 +1,5 @@
 ---
-layout: score
+layout: set
 title: Decision Tree
 status: wip
-info: >
-    <h3>Weighted randomness</h3>
-    <p>
-        Tap or click on one of the cells or use the up and down arrow keys to choose a cell.
-        The parameters of the cell you choose will be more likely to appear in future cells.
-    </p>
-footer: true
-settings: >
-    <div>
-        <h4>WebSocket Connection:</h4>
-        <p id="ws-log"></p>
-    </div>
-vs_modules: [dictionary.bravura, pitchClass, websockets]
 ---
-<p class="debug monospace"></p>
