Create initial 'prelude' from Storyboard

--- a/scores/storyboard/index.html
+++ b/scores/storyboard/index.html
@@ -1,14 +1,5 @@
 ---
-layout: score
+layout: set
 title: Storyboard
 status: wip
-footer: true
-settings: >
-    Display pitch classes as:
-    <div style="margin: 1em 0;">
-        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
-    </div>
-    <button id="settings-generate">Generate new score</button>
-vs_modules: [cue, dictionary.bravura, pitchClass, settings.radio]
 ---
