Prevent duplicate rhythms in dirge,,march percussion parts

--- a/scores/globject/index.html
+++ b/scores/globject/index.html
@@ -1,7 +1,7 @@
 ---
 layout: score
 title: globject
-status: wip
+status: test
 footer: true
 vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass]
 ---
