Consolidate pages into directory
about.md remains in the root directory as it includes README.md

--- a/_pages/glossary.html
+++ b/_pages/glossary.html
@@ -6,7 +6,7 @@ permalink: /glossary/
 <!-- any ensemble timbres
 generalized
 not all possibilities are listed
-interpret to the bet of your ability analogous timbres
+interpret to the best of your ability analogous timbres
 allowing flexibility to help blend well an an ensemble -->
 <dl>
 {% for term in site.data.glossary %}
