Create initial lineCloud module

--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -10,5 +10,5 @@ settings: >
         <input type="radio" name="settings-pc-display" value="name"> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
-vs_modules: [cue, dictionary.bravura, pitchClass, settings.radio]
+vs_modules: [cue, dictionary.bravura, pitchClass, settings.radio, line-cloud]
 ---
