Display exactly-timed scenes as bars with time signatures

--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -3,6 +3,9 @@ layout: movement
 title: prelude
 status: wip
 footer: true
+info: >
+    Notation within rectangles is considered a "scene" of music, describing the overall qualities but are not to be interpreted literally (especially in the time domain).
+    Notation outside scenes (pitch material and dynamics) provide qualities to shape the scene over time.
 settings: >
     Display pitch classes as:
     <div style="margin: 1em 0;">
