--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -10,5 +10,5 @@ settings: >
         <input type="radio" name="settings-pc-display" value="name"> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
-vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio]
+vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, line-cloud]
 ---
