--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -3,6 +3,9 @@ layout: score
 title: dirge,,march
 status: wip
 footer: true
+info: >
+    This work is for two groups: three or more musicians performing the "globject" part and two musicians playing the percussion line.
+    The musician playing the first percussion part should cue both percussion parts in and out when rhythms are displayed or hidden.
 settings: >
     Display pitch classes as:
     <div style="margin: 1em 0;">
