--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -14,10 +14,16 @@ info: >
     </p>
 footer: true
 settings: >
+    Display pitch classes as:
+    <div style="margin: 1em 0;">
+        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
+        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
+    </div>
+    <button id="settings-generate">Generate new score</button>
     <div>
         <h4>WebSocket Connection:</h4>
         <p id="ws-log"></p>
     </div>
-vs_modules: [dictionary.bravura, pitchClass, websockets, trichords]
+vs_modules: [dictionary.bravura, pitchClass, websockets, trichords, settings.radio]
 ---
 <p class="debug monospace"></p>
