Update cells score information

--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -3,14 +3,13 @@ layout: movement
 title: cells
 status: wip
 info: >
-    <h3>Weighted randomness</h3>
     <p>
         When the score is playing, tap or click on one of the cells or use the up and down arrow keys to choose a cell.
         The parameters of the cell you choose will be more likely to appear in future cells.
     </p>
     <p>
-        Play the phrase in the selected box using the pitch classes and durations shown outside the box.
-        Quarter note heads and rests are used generically to show the number of notes in a phrase or if the player should rest.
+        Play the phrase in the selected box using the pitch classes shown outside the box.
+        The quarter rest is used generically to indicate the player should rest.
     </p>
 footer: true
 settings: >
