Add instrumentation to WIP and published works, adjust .work-title

--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -1,6 +1,7 @@
 ---
 layout: score
 title: dirge,,march
+instrumentation: any ensemble (3+ pitched, 2+ percussive)
 status: wip
 footer: true
 info_file: _info.md
