Add availability of score, parts to WIP and published works

--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -9,5 +9,6 @@ info_file: _info.md
 settings_file: _settings.md
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
 status: published
+formats: [score, parts]
 footer: true
 ---
