--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -3,6 +3,7 @@ layout: score
 title: dirge,,march
 instrumentation: any ensemble (3+ pitched, 2+ percussive)
 status: wip
+formats: score
 footer: true
 info_file: _info.md
 settings: >
