--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -3,6 +3,7 @@ layout: score
 title: glob
 instrumentation: any ensemble
 status: wip
+formats: score
 footer: true
 settings: >
     Display pitch classes as:
