Add basic table for work list
TODO:
- rename files and elements
- style

--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -5,6 +5,7 @@ composer: John Teske
 publish_date: 2015, rev. 2017
 dedication: for Friction Quartet
 instrumentation: any ensemble (3+)
+duration: 6&prime;
 info_file: _info.md
 settings_file: _settings.md
 vs_modules: [cue, xByDuration, dictionary.bravura, websockets]
