--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -2,6 +2,7 @@
 layout: score
 title: dirge,,march
 instrumentation: any ensemble (3+ pitched, 2+ percussive)
+duration: 5&prime;39&Prime;
 status: wip
 formats: score
 footer: true
