Create cueBlink module, use consistently

--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -11,5 +11,5 @@ settings: >
         <input type="radio" name="settings-pc-display" value="name"> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
-vs_modules: [dictionary.bravura, pitchClass, settings.radio, line-cloud]
+vs_modules: [dictionary.bravura, pitchClass, settings.radio, line-cloud, cue-blink]
 ---
