Create partial and module for PitchClassSettings
For ease of use in 'prelude' and future works

--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -6,5 +6,5 @@ status: wip
 formats: score
 footer: true
 settings_file: _settings.md
-vs_modules: [dictionary.bravura, pitchClass, settings.radio]
+vs_modules: [dictionary.bravura, pitchClass, settings.radio, settings.pitch-classes]
 ---
