--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -4,12 +4,6 @@ title: prelude
 status: wip
 footer: true
 info_file: _info.md
-settings: >
-    Display pitch classes as:
-    <div style="margin: 1em 0;">
-        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
-    </div>
-    <button id="settings-generate">Generate new score</button>
-vs_modules: [dictionary.bravura, pitchClass, settings.radio, line-cloud, cue-blink]
+settings_file: _settings.md
+vs_modules: [dictionary.bravura, pitchClass, settings.radio, settings.pitch-classes, line-cloud, cue-blink]
 ---
