Use VS.PitchClassSettings in dirge,,march

--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -7,12 +7,6 @@ status: wip
 formats: score
 footer: true
 info_file: _info.md
-settings: >
-    Display pitch classes as:
-    <div style="margin: 1em 0;">
-        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
-    </div>
-    <button id="settings-generate">Generate new score</button>
-vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, line-cloud]
+settings_file: _settings.md
+vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, settings.pitch-classes, line-cloud]
 ---
