--- a/scores/3d-object/index.html
+++ b/scores/3d-object/index.html
@@ -1,7 +1,7 @@
 ---
 layout: score
 title: 3D object
-status: test
+status: unlisted
 ---
 <!-- <h3>Controls: performer angle</h3>
 <div class="position-controls">
