--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: score
 title: Textural Messages
-status: test
+status: unlisted
 #settings_file: _settings.html
 vs_modules: [globject, xByDuration, trichords, pitchClass, settings.radio]
 ---
