--- a/scores/globject/index.html
+++ b/scores/globject/index.html
@@ -1,6 +1,6 @@
 ---
 layout: score
 title: globject
-status: test
+status: unlisted
 vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass]
 ---
