Refactor timing-controls example for clarity

--- a/scores/time-control/index.html
+++ b/scores/time-control/index.html
@@ -12,7 +12,7 @@ info: >
 ---
 <p id="events"></p>
 
-{% comment %}<div class="ws">
+{% comment %}<div class="websockets">
     <h3>WebSockets</h3>
     {% unless jekyll.environment == "offline" %}
     <p>Only available in local environment.</p>
