--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -11,17 +11,7 @@ info: >
         Play the phrase in the selected box using the pitch classes shown outside the box.
         The quarter rest is used generically to indicate the player should rest.
     </p>
-settings: >
-    Display pitch classes as:
-    <div style="margin: 1em 0;">
-        <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
-        <input type="radio" name="settings-pc-display" value="name"> Note names<br>
-    </div>
-    <button id="settings-generate">Generate new score</button>
-    <div>
-        <h4>WebSocket Connection:</h4>
-        <p id="ws-log"></p>
-    </div>
+settings_file: settings.md
 vs_modules: [dictionary.bravura, pitchClass, websockets, trichords, settings.radio]
 ---
 <p class="debug monospace"></p>
