--- a/scores/time-control/index.html
+++ b/scores/time-control/index.html
@@ -3,21 +3,6 @@ layout: score
 title: timing controls
 status: test
 info: >
-    <h3>Playground for event timing<!--, including WebSocket control--></h3>
-    <!--<p>
-        When serving the site locally, run <pre>ruby websockets.rb</pre> to run the WebSocket server.
-        Devices accessing the local site will be able to send control messages for timing.
-    </p>-->
-# vs_modules: [websockets]
+    <h3>Playground for event timing</h3>
 ---
 <p id="events"></p>
-
-{% comment %}<div class="websockets">
-    <h3>WebSockets</h3>
-    {% unless jekyll.environment == "offline" %}
-    <p>Only available in local environment.</p>
-    {% endunless %}
-    <div id="ws-log"></div>
-    <!-- <button id="connect">Connect</button> -->
-    <!-- <button id="disconnect">Disconnect</button> -->
-</div>{% endcomment %}
