--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -8,7 +8,7 @@ instrumentation: any ensemble (3+)
 duration: 6&prime;
 info_file: _info.md
 settings_file: _settings.md
-vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets]
+vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets, settings.checkbox]
 status: published
 formats: [score, parts]
 ---
