--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -7,8 +7,8 @@ dedication: for Friction Quartet
 instrumentation: any ensemble (3+)
 duration: 6&prime;
 info_file: _info.md
-settings_file: _settings.md
-vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets, settings.number, settings.checkbox, settings.generate-button]
+settings_file: _settings.html
+vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets, settings.number, settings.checkbox]
 status: published
 formats: [score, parts]
 ---
