Refactor PitchClassSettings, add support for dirge,,march

--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -6,6 +6,6 @@ duration: 5&prime;39&Prime;
 status: wip
 formats: score
 info_file: _info.md
-settings_file: _settings.md
-vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, settings.pitch-classes, line-cloud]
+settings_file: _settings.html
+vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, settings.pitch-classes, settings.number, line-cloud]
 ---
