Group settings module files

--- a/scores/decision-tree/cells/_settings.html
+++ b/scores/decision-tree/cells/_settings.html
@@ -4,4 +4,4 @@
     {% include score/settings/generate-button.html %}
 </form>
 
-{% include score/settings/websocket.html %}
+{% include score/websocket.html %}
