--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -12,6 +12,6 @@ info: >
         The quarter rest is used generically to indicate the player should rest.
     </p>
 settings_file: _settings.html
-vs_modules: [dictionary.bravura, pitchClass, settings.radio, settings.pitch-classes, websockets, trichords]
+vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/pitch-classes, websockets, trichords]
 ---
 <p class="debug monospace"></p>
