--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -7,5 +7,5 @@ status: wip
 formats: score
 info_file: _info.md
 settings_file: _settings.html
-vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings.radio, settings.pitch-classes, settings.number, line-cloud]
+vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings/radio, settings/pitch-classes, settings/number, line-cloud]
 ---
