--- a/scores/adsr/_settings.html
+++ b/scores/adsr/_settings.html
@@ -9,4 +9,4 @@
     {% include score/settings/generate-button.html %}
 </form>
 
-{% include score/settings/websocket.html %}
+{% include score/websocket.html %}
