--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -5,5 +5,5 @@ instrumentation: any ensemble
 status: wip
 formats: score
 settings_file: _settings.html
-vs_modules: [dictionary.bravura, pitchClass, settings.radio, settings.number, settings.pitch-classes]
+vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/number, settings/pitch-classes]
 ---
