--- a/scores/storyboard/cards/index.html
+++ b/scores/storyboard/cards/index.html
@@ -9,5 +9,5 @@ settings: >
         <input type="radio" name="settings-pc-display" value="name"> Note names<br>
     </div>
     <button id="settings-generate">Generate new score</button>
-vs_modules: [cue-blink, dictionary.bravura, pitchClass, settings.radio]
+vs_modules: [cue-blink, dictionary.bravura, pitchClass, settings/radio]
 ---
