--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -4,5 +4,5 @@ title: prelude
 status: wip
 info_file: _info.md
 settings_file: _settings.html
-vs_modules: [dictionary.bravura, pitchClass, settings.radio, settings.number, settings.pitch-classes, line-cloud, cue-blink]
+vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/number, settings/pitch-classes, line-cloud, cue-blink]
 ---
