Rename settings modal to options, keep UI controls as settings

--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -2,6 +2,5 @@
 layout: score
 title: Textural Messages
 status: unlisted
-#settings_file: _settings.html
-vs_modules: [globject, xByDuration, trichords, pitchClass, settings/radio]
+vs_modules: [globject, xByDuration, trichords, pitchClass]
 ---
