--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -11,7 +11,7 @@ info: >
         Play the phrase in the selected box using the pitch classes shown outside the box.
         The quarter rest is used generically to indicate the player should rest.
     </p>
-settings_file: _settings.html
+options_file: _options.html
 vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/pitch-classes, websockets, trichords]
 ---
 <p class="debug monospace"></p>
