--- a/scores/storyboard/cards/index.html
+++ b/scores/storyboard/cards/index.html
@@ -2,7 +2,7 @@
 layout: movement
 title: cards
 status: wip
-settings: >
+options: >
     Display pitch classes as:
     <div style="margin: 1em 0;">
         <input type="radio" name="settings-pc-display" value="integer" checked> Integers<br>
