--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -7,7 +7,7 @@ dedication: for Friction Quartet
 instrumentation: any ensemble (3+)
 duration: 6&prime;
 info_file: _info.md
-settings_file: _settings.html
+options_file: _options.html
 vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets, settings/number, settings/checkbox]
 status: published
 formats: [score, parts]
