--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -4,6 +4,6 @@ title: glob
 instrumentation: any ensemble
 status: wip
 formats: score
-settings_file: _settings.html
+options_file: _options.html
 vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/number, settings/pitch-classes]
 ---
