--- a/scores/storyboard/prelude/index.html
+++ b/scores/storyboard/prelude/index.html
@@ -3,6 +3,6 @@ layout: movement
 title: prelude
 status: wip
 info_file: _info.md
-settings_file: _settings.html
+options_file: _options.html
 vs_modules: [dictionary.bravura, pitchClass, settings/radio, settings/number, settings/pitch-classes, line-cloud, cue-blink]
 ---
