--- a/scores/tutorial/index.html
+++ b/scores/tutorial/index.html
@@ -4,8 +4,8 @@ title: tutorial
 status: test
 info: >
     Close the info modal by clicking away, clicking the close button in the top right, or by pressing the escape key.
-settings: >
-    Close the settings modal by clicking away, clicking the close button in the top right, or by pressing the escape key.
+options: >
+    Close the options modal by clicking away, clicking the close button in the top right, or by pressing the escape key.
 ---
 
 <div class="tutorial-message">
