8 Encode Bravura to inline as data URI if needed for critical rendering

--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -7,5 +7,6 @@ status: wip
 formats: score
 info_file: _info.md
 options_file: _options.html
+inline_bravura: true
 vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings/radio, settings/pitch-classes, settings/number, line-cloud]
 ---
