37 Add basic cue indicator

--- a/scores/dirge-march/index.html
+++ b/scores/dirge-march/index.html
@@ -8,5 +8,5 @@ formats: score
 info_file: _info.md
 options_file: _options.html
 inline_bravura: true
-vs_modules: [globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings/radio, settings/pitch-classes, settings/number, line-cloud]
+vs_modules: [cue-blink, globject, dictionary.bravura, xByDuration, trichords, pitchClass, settings/radio, settings/pitch-classes, settings/number, line-cloud]
 ---
