--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -8,7 +8,7 @@ instrumentation: any ensemble (3+)
 duration: 6&prime;
 info_file: _info.md
 options_file: _options.html
-vs_modules: [cue-blink, xByDuration, dictionary.bravura, websockets, settings/number, settings/checkbox]
+vs_modules: [cue-blink/index, xByDuration, dictionary.bravura, websockets, settings/number, settings/checkbox]
 status: published
 formats: [score, parts]
 ---
