Standardize module names
Use kebab-case for module file names.

--- a/scores/Textural-Messages/index.html
+++ b/scores/Textural-Messages/index.html
@@ -2,5 +2,5 @@
 layout: score
 title: Textural Messages
 status: unlisted
-modules: [globject, xByDuration, trichords, pitchClass]
+modules: [globject, x-by-duration, trichords, pitch-class]
 ---
