--- a/scores/decision-tree/cells/index.html
+++ b/scores/decision-tree/cells/index.html
@@ -12,6 +12,6 @@ info: >
         The quarter rest is used generically to indicate the player should rest.
     </p>
 options_file: _options.html
-modules: [dictionary.bravura, pitchClass, settings/radio, settings/pitch-classes, websockets, trichords]
+modules: [dictionary/bravura, pitch-class, settings/radio, settings/pitch-classes, websockets, trichords]
 ---
 <p class="debug monospace"></p>
