--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -5,5 +5,5 @@ instrumentation: any ensemble
 status: wip
 formats: score
 options_file: _options.html
-modules: [dictionary.bravura, pitchClass, settings/radio, settings/number, settings/pitch-classes]
+modules: [dictionary/bravura, pitch-class, settings/radio, settings/number, settings/pitch-classes]
 ---
