--- a/scores/topographies-ii/walk-reveal/index.html
+++ b/scores/topographies-ii/walk-reveal/index.html
@@ -2,7 +2,7 @@
 layout: movement
 title: walk reveal
 status: wip
-modules: dictionary.bravura
+modules: dictionary/bravura
 info: >
     <p>
         Travel through the landscape, interpreting small areas of symbols as musical phrases and textures.
