--- a/assets/modules/cue/index.html
+++ b/assets/modules/cue/index.html
@@ -1,7 +1,7 @@
 ---
 layout: score
 title: cue blink
-modules: cue/blink
+modules: [cue/blink, dictionary/bravura]
 ---
 <div id="cue-1" class="cue-test">
     <button>Start</button>
