--- a/assets/modules/factories/index.html
+++ b/assets/modules/factories/index.html
@@ -1,5 +1,5 @@
 ---
 layout: score
 title: factories
-modules: [factories/pitch-class, factories/pitch]
+modules: [factories/pitch-class, factories/pitch, factories/pitch2]
 ---
