Refactor js template use

--- a/pages/performances.html
+++ b/pages/performances.html
@@ -2,7 +2,7 @@
 layout: page
 title: Performances
 permalink: /performances/
-menu: true
+tags: topNav
 ---
 {% if site.data.performances.upcoming %}
 <h2>Upcoming</h2>
