--- a/scores/storyboard/prelude/_options.html
+++ b/scores/storyboard/prelude/_options.html
@@ -1,7 +1,7 @@
 <form class="score-options">
-    {% include score/settings/pitch-classes.html %}
+    include score/settings/pitch-classes.html
 
-    {% include score/settings/transposition.html %}
+    include score/settings/transposition.html
 
-    {% include score/settings/generate-button.html %}
+    include score/settings/generate-button.html
 </form>
